--- a/dictionary/style.css
+++ b/dictionary/style.css
@@ -1,6 +1,5 @@
 * {
 box-sizing: border-box;
-padding: 0;
 margin: 0 auto;
 }
 
@@ -96,18 +95,33 @@ flex-wrap: wrap;
 .card-word{
   display: grid;
   grid-template-columns: 1fr 3fr;
-  padding: 10px;
+  gap: 10px;
   background: linear-gradient(180deg, #ffffff54, #fca65f94);
   border: 1px solid white;
   border-radius: 15px;
   box-shadow: 0px 5px 8px 2px rgb(0 0 0 / 20%);
-  transition: 0.3s;
+  padding: 10px;
+  margin: 20px;
 }
 
 .img-word{
   width: 100%;
   border-radius: 15px;
   padding-top: 10px;
+}
+
+.word-translate{
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+  gap: 10px;;
+}
+
+.word-example{
+  margin-top: 20px;
+  color: #362d29;
+  font-style: italic;
 }
 
 @media (max-width:600px){
