--- a/dictionary/style.css
+++ b/dictionary/style.css
@@ -115,7 +115,8 @@ flex-wrap: wrap;
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
-  gap: 10px;;
+  gap: 10px;
+  font-size: 1.5em;
 }
 
 .word-example{
