--- a/dictionary/style.css
+++ b/dictionary/style.css
@@ -9,7 +9,7 @@ body {
 }
 
 header, footer {
-background-color:#f3eac4;
+background-color:#d1dbe2;
 height: 60px;
 display: flex;
 align-items: center;
@@ -25,7 +25,7 @@ justify-content: space-between;
 
 .footer {
   height: 40px;
-  background-color:#8ec6f0;
+  background-color:#ccddeb;
 }
 
 .footer-logo {
@@ -38,7 +38,7 @@ justify-content: space-between;
 }
 .main {
  min-height: calc(100vh - 100px);
- background:#d7f5e7;
+ background:#cbe9f8;
 }
 
 .element-style {
@@ -84,7 +84,7 @@ flex-wrap: wrap;
  }
 
 .word:hover{
-  background-color:#bdae83;
+  background-color:#e6ffc6;
   transform: scale(1.2);
 }
 
@@ -96,7 +96,7 @@ flex-wrap: wrap;
   display: grid;
   grid-template-columns: 1fr 3fr;
   gap: 10px;
-  background: linear-gradient(180deg, #ffffff54, #fca65f94);
+  background: linear-gradient(180deg, #ffffff54, #5fb4fcb3);
   border: 1px solid white;
   border-radius: 15px;
   box-shadow: 0px 5px 8px 2px rgb(0 0 0 / 20%);
@@ -131,5 +131,3 @@ flex-wrap: wrap;
 }
 
 }
-
-
