--- a/dictionary/style.css
+++ b/dictionary/style.css
@@ -21,7 +21,10 @@ ul {
   font-size: 0.8rem;
   padding: 10px; 
   }
-
+h3 {
+padding: 10px; 
+text-align: center; 
+}
 
 .logo {
   height: 30px;
@@ -44,6 +47,11 @@ font-weight: bold;
   transition: 0.5s ease-in-out;
   cursor:pointer;
 }
+
+.small-btn{
+  width: 25%;
+}
+
 .button p{
   color: #f8faff;
   font-size: 0.8rem;
